# dazzlecmd-lib

./: .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
dazzlecmd_lib/: __init__.py  __main__.py  _version.py  aggregator_config.py  cli_helpers.py  colors.py  conditions.py  config.py  contexts.py  continuum.py  default_meta_commands.py  engine.py  entity.py  fqcn_grammar.py  fqcn_tree.py  instance_plane.py  interrogation.py  loader.py  meta_command_registry.py  mode.py  mode_space.py  paths.py  platform_detect.py  presentation.py  prop_commands.py  property_store.py  property_values.py  registry.py  rendering.py  reserved.py  self_setup.py  setup_resolve.py  shell_fix.py  states.py  target_resolution.py  testing.py  verb_axis.py  verb_contracts.py
dazzlecmd_lib/core/: __init__.py
dazzlecmd_lib/core/links/: __init__.py  _detect.py
dazzlecmd_lib/core/safedel/: __init__.py  _classifier.py  _platform.py  _recover.py  _store.py
dazzlecmd_lib/templates/__with__/ci/.github/workflows/: release.yml.tmpl  test.yml.tmpl
dazzlecmd_lib/templates/__with__/docker-deploy/: Dockerfile.tmpl
dazzlecmd_lib/templates/__with__/docker-test/: Dockerfile.test.tmpl  docker-compose.test.yml.tmpl
dazzlecmd_lib/templates/aggregator/: .gitignore.tmpl  README.md.tmpl  aggregator.json.tmpl  pyproject.toml.tmpl
dazzlecmd_lib/templates/aggregator/src/{name_underscore}/: __init__.py.tmpl  _version.py.tmpl  cli.py.tmpl
dazzlecmd_lib/templates/aggregator/tests/: test_cli_smoke.py.tmpl
dazzlecmd_lib/templates/bash/: .dazzlecmd.json.tmpl  {name}.sh.tmpl
dazzlecmd_lib/templates/binary/: .dazzlecmd.json.tmpl  README.md.tmpl
dazzlecmd_lib/templates/c_cpp/: .dazzlecmd.json.tmpl  Makefile.tmpl  main.c.tmpl
dazzlecmd_lib/templates/cmd/: .dazzlecmd.json.tmpl  {name}.cmd.tmpl
dazzlecmd_lib/templates/docker/: .dazzlecmd.json.tmpl  Dockerfile.tmpl
dazzlecmd_lib/templates/generic/: .dazzlecmd.json.tmpl  README.md.tmpl
dazzlecmd_lib/templates/node/: .dazzlecmd.json.tmpl  index.js.tmpl  package.json.tmpl
dazzlecmd_lib/templates/powershell/: .dazzlecmd.json.tmpl  {name}.ps1.tmpl
dazzlecmd_lib/templates/python/: .dazzlecmd.json.tmpl
dazzlecmd_lib/templates/python/__full__/: .dazzlecmd.json.tmpl  README.md.tmpl  dz_setup.py.tmpl  requirements.txt.tmpl
dazzlecmd_lib/templates/python/__full__/tests/: test_{name_underscore}.py.tmpl
dazzlecmd_lib/templates/repokit_fallback/: CONTRIBUTING.md.tmpl  LICENSE.tmpl
dazzlecmd_lib/templates/rust/: .dazzlecmd.json.tmpl  Cargo.toml.tmpl
dazzlecmd_lib/templates/rust/src/: main.rs.tmpl
docs/: platform-support.md
tests/: conftest.py  test_aggregator_config.py  test_continuum.py  test_core_links.py  test_core_safedel.py  test_dmc_reexports.py  test_entity.py  test_fqcn_grammar.py  test_fqcn_tree.py  test_interrogation.py  test_mode_parameterization.py  test_mode_space.py  test_prop_commands.py  test_property_store.py  test_property_values.py  test_render_kit_list_unified.py  test_self_setup.py  test_shell_fix.py  test_target_resolution.py  test_tree_walk.py  test_verb_axis.py  test_verb_context_adherence.py  test_verb_contracts.py  test_version.py
tests/checklists/: v0.10.1-alpha__Epic__fqcn-property-store-and-grammar.md  v0.10.7-alpha__Epic__fqcn-property-surface-and-sugar.md  v0.10.8-alpha__Feature__assignment-marker-and-help-surfaces.md  v0.11.29-alpha__Refactor__cli-decomposition-r6-r7-dispatch.md
tests/fixtures/aggregator-json/: amdead.aggregator.json  dazzlecmd.aggregator.json
tests/one-offs/: repro_node_alias_breaks_family_listing.py  spike_tree_walk.py
tests/one-offs/selfsetup-standalone/: conftest.py
