[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dazzlecmd-lib"
dynamic = ["version"]
description = "Engine library for dazzlecmd-pattern tool aggregators"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Dustin", email = "6962246+djdarcy@users.noreply.github.com"},
]
keywords = ["cli", "tools", "aggregator", "engine", "dispatch", "dazzletools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # The DazzleEntity object model (entity.py / aggregator_config.py) is built
    # on Pydantic v2 -- a hard runtime dependency since the 0.8.x rearchitecture.
    # (colorama and distro are imported best-effort under try/except, so they
    # stay optional/undeclared; pydantic is the one unconditional import.)
    "pydantic>=2.0",
    # The shared pure primitives live in the dazzle-lib bedrock: Continuum, the
    # state-system machinery, the transition executor (Receipt/TransitionContext),
    # the CLOSED composition algebra (ContinuumSpace.compose/normal_form), AND the
    # contract Protocols (GroupableProtocol; VerbContext, which contexts.py imports).
    # dazzlecmd_lib.continuum/.states/.contexts re-export them.
    "dazzle-lib>=0.8.0",
    # dazzlecmd_lib.core.safedel (the recoverable-delete primitive) uses
    # dazzle_filekit.metadata for cross-platform metadata preservation
    # (ACLs/ADS/timestamps/xattrs). filekit is the canonical home of that code.
    "dazzle-filekit>=0.2.2",
    # The trash engine's per-volume routing (_volumes) needs Windows drive-type
    # detection (network/removable/fixed) for zero-copy same-volume rename;
    # unctools provides it. Windows-only -- POSIX uses the in-module stubs.
    "unctools>=0.1.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Windows ANSI translation for legacy cmd.exe (modern Windows 1511+ handles
# ANSI natively via VT processing; only legacy cmd needs this).
color = ["colorama>=0.4.0; platform_system == 'Windows'"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DazzleLib/dazzlecmd-lib"
Repository = "https://github.com/DazzleLib/dazzlecmd-lib"
Issues = "https://github.com/DazzleLib/dazzlecmd-lib/issues"

[tool.setuptools.dynamic]
version = {attr = "dazzlecmd_lib._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dazzlecmd_lib", "dazzlecmd_lib.*"]

[tool.setuptools.package-data]
dazzlecmd_lib = [
    "templates/*",
    "templates/**/*",
    "templates/**/**/*",
    # Dot-named templates (.dazzlecmd.json.tmpl, .gitignore.tmpl): `*` globs
    # skip dotfiles, so they need explicit patterns to ship in the wheel.
    "templates/**/.*.tmpl",
    "templates/**/**/.*.tmpl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "dazzlecmd_lib/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/DazzleLib/dazzlecmd-lib"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
